# deepscroll

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
deepscroll/: __init__.py  cli.py  core.py  file_index.py  llm.py  mcp_server.py  navigator.py  repl.py
deepscroll/prompts/: rlm_system.md
examples/: analyze_codebase.py  deep_research.py
kiba_rlm/: __init__.py  cli.py  core.py  mcp_server.py
tests/: __init__.py  test_core.py  test_navigator.py  test_repl.py
