[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kiba-rlm"
version = "0.1.0"
description = "Recursive Language Models for infinite context - 10M+ tokens analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Grzegorz Olszówka", email = "grzegorzolszowka@gmail.com" }
]
keywords = [
    "llm",
    "recursive",
    "infinite-context",
    "rag",
    "document-analysis",
    "claude",
    "openai"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "RestrictedPython>=7.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
mcp = [
    "mcp>=0.1.0",
]
streaming = [
    "transformers>=4.33.0",
    "torch>=2.0.0",
]

[project.scripts]
kiba-rlm = "kiba_rlm.cli:cli"

[project.urls]
Homepage = "https://github.com/kiba-solutions/kiba-rlm"
Documentation = "https://github.com/kiba-solutions/kiba-rlm#readme"
Repository = "https://github.com/kiba-solutions/kiba-rlm"

[tool.hatch.build.targets.wheel]
packages = ["kiba_rlm"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
